# jsonpatchx

./: .checkov.yaml  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  README.md  SECURITY.md  main.py  pyproject.toml  readme2.md  zensical.toml
.clusterfuzzlite/: Dockerfile  README.md  build.sh  project.yaml  requirements-bootstrap.txt  requirements-fuzz.txt
.github/: CODEOWNERS  codecov.yml  dependabot.yml  dependency-review-config.yml  pull_request_template.md  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/linters/: .checkov.yaml  .jscpd.json  .markdownlint.yml  .prettierrc.json  .spectral.yaml  .yamllint.yml  README.md  os-packages.json
.github/workflows/: README.md  cflite_coverage.yml  cflite_pr.yml  cflite_weekly.yml  codeql.yml  dependabot-snapshots.yml  dependabot-update-openapi-snapshots.yml  dependency-action.yml  dependency-review-full-audit.yml  dependency-review.yml  dependency.yml  docs-pages.yml  lint.yml  publish-to-pypi.yml  python-app.yml  python-tests.yml  scorecard.yml  stale.yml  update-coverage-badge.yml  update-openapi-snapshots.yml
corpus/jsonpatchx_fuzzer/: 0000000000000002
coverage/latest/fuzzer_stats/: coverage_targets.txt
docs/: advanced-patterns.md  api-cheat-sheet.md  api-reference-exceptions.md  api-reference-fastapi.md  api-reference-patch-engine.md  api-reference-pointers.md  api-reference-public.md  api-reference-pydantic.md  api-reference-registries.md  api-reference-schema.md  api-reference-standard.md  api-reference-types.md  api-reference.md  config-driven-operation-rollout.md  contract-evolution-and-deprecation.md  core-concepts.md  custom-operations-and-typed-pointers.md  custom-operations.md  demo-error-shapes.md  demos.md  developer-docs-preview.md  developer-reference.md  error-catalog.md  error-semantics-and-contract-tests.md  fastapi-integration.md  getting-started.md  index.md  jsonpatchfor-contracts.md  jsonpath-selection.md  legacy-user-guide.md  operation-registries-and-endpoint-policy.md  operation-registries.md  patch-contracts.md  patching-plain-json.md  patching-pydantic-models.md  pointer-backends.md  recursive-bound-limitation.md  troubleshooting.md  type-system-notes.md
docs/about/: about.md  acknowledgements.md  why-jsonpatchx.md
docs/api-reference/: api-reference-backends.md  api-reference-builtins.md  api-reference-exceptions.md  api-reference-fastapi.md  api-reference-pointers.md  api-reference-public.md  api-reference-pydantic.md  api-reference-registries.md  api-reference-schema.md  api-reference-standard.md  api-reference-types.md  api-reference.md
docs/developer-reference/: custom-pointers-and-selectors.md  developer-docs-preview.md  developer-reference.md  limitations-in-python-type-system.md  type-system-notes.md
docs/user-guide/: agentic-patching.md  config-driven-operation-rollout.md  contract-evolution-and-deprecation.md  contract-tests.md  custom-operations.md  deployment-profiles-and-environment-specific-contracts.md  error-semantics-and-contract-tests.md  error-semantics.md  evolving-patch-contracts.md  getting-started.md  jsonpath-selection.md  jsonselector-and-alternative-targeting.md  patch-clients.md  patch-contracts-in-fastapi.md  patch-targeting.md  registries-and-endpoint-policy.md  registries-and-routes.md
examples/: AGENTS.md  README.md  custom_ops.py  custom_ops_baseline.py  custom_ops_demo.py  demo.py  demo1.py  demo2.py  demo3.py  demo4.py  fastapi_openapi.py  loader.py  openapi_baseline.py  openapi_demo.py  recipes.py  recipes2.py  run.py  shared.py
examples/_shared/: app.py  clients.http  error_cases.py  media.py  responses.py  schemas.py  store.py
examples/baselines/: README.md
examples/baselines/average/: api_ad_hoc_custom.py  api_loose_schema.py  pointer_utils.py
examples/baselines/best_effort/: api_custom_union_ops.py  api_union_ops.py  pointer_utils.py
examples/custom/: cli_apply.py
examples/custom_ops/: __init__.py  api_custom_ops_model.py  api_custom_ops_typed.py  custom_ops.py
examples/fastapi/: README.md  demo.py  demo1.py  demo2.py  demo3.py  demo4.py  demo5.py  demo6.py  demo7.py  demo8.py  shared.py
examples/openapi/: demo1_openapi.json  demo2_openapi.json  demo3_openapi.json  demo4_openapi.json  demo5_openapi.json  demo6_openapi.json  demo7_openapi.json  demo8_openapi.json
examples/pointer_backends/: api_custom_pointer.py  simple_backend.py
examples/standard/: api_typed_model.py  api_untyped_doc.py  cli_apply.py  failures.py
fuzzers/: README.md  __init__.py  _fuzz_shared.py  jsonpatchx_custom_backend_fuzzer.dict  jsonpatchx_custom_backend_fuzzer.py  jsonpatchx_fuzzer.dict  jsonpatchx_fuzzer.py
fuzzers/corpus/jsonpatchx_custom_backend_fuzzer/: seed_dot_patch.json  seed_dot_pointer.txt  (+1 more)
jsonpatch/: __init__.py  builtins.py  exceptions.py  fastapi.py  operation_schema.py  ops_builtin.py  patch_schema.py  primitives.py  pydantic.py  registry.py  schema.py  standard.py  types.py
jsonpatchx/: __init__.py  backend.py  builtins.py  exceptions.py  fastapi.py  pointer.py  pydantic.py  registry.py  schema.py  selector.py  standard.py  types.py
overrides/: main.html
scripts/: coverage_diff.py  update_openapi_snapshots.py
src/: exceptions.py
src/jsonpatch/: __init__.py  exceptions.py  models.py  ops.py  ops_builtin.py  schema.py  types.py
tests/: conftest.py  tests.json
tests/agents/: README.md  add-missing-key-op.md  bound-number-op.md  lowercase-op.md  replace-array-value-op.md  swap-op-structured-validation.md
tests/integration/: test_custom_backend.py  test_custom_ops.py  test_json_patch_compliance.py  test_json_patch_rfc6902.py  test_openapi_snapshot.py
tests/snapshots/: openapi.json
tests/support/: __init__.py  fastapi_clients.py  http.py  openapi_contracts.py  pointers.py  rfc_data.py  selectors.py  type_suite.py
tests/unit/: conftest.py  test_backend.py  test_pointer_backend_rfc6901.py  test_pydantic_helpers.py  test_registry.py  test_registry_patch.py  test_schema.py  test_types.py  test_types2.py
(+80 files in other folders)
