[project]
name = "jsonpatchx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jsonpointer>=3.0.0",
    "pydantic>=2.12.5",
    "typing-extensions>=4.15.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["jsonpatchx*"]

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.128.0",
]

[dependency-groups]
dev = [
    { include-group = "tests" },
    { include-group = "lint" },
    { include-group = "typing" },
]
lint = [
    "ruff>=0.15.7",
]
tests = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "python-jsonpath>=2.0.2",
    "uvicorn>=0.42.0",
]
typing = [
    "mypy>=1.19.1",
]
fuzz = [
    "atheris>=3.0.0; python_version >= '3.11' and python_version < '3.14'",
    "pyinstaller>=6.10.0",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.12"
strict = true
enable_incomplete_feature = ["TypeForm"]
exclude = "temp.py|tests"
exclude_gitignore = true

warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true

disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true

no_implicit_optional = true
check_untyped_defs = true

enable_error_code = [
  "type-arg",
  "no-untyped-def",
  "redundant-cast",
  "redundant-self",
  "comparison-overlap",
  "no-untyped-call",
  "no-any-return",
  "no-any-unimported",
  "unreachable",
  "deprecated",
  "redundant-expr",
  "possibly-undefined",
  "truthy-bool",
  "truthy-iterable",
  "ignore-without-code",
  "unused-awaitable",
  "unused-ignore",
  "explicit-override",
  "mutable-override",
  "unimported-reveal",
  "explicit-any",
  "exhaustive-match",
  "untyped-decorator",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.coverage.run]
branch = true
parallel = true
source = ["jsonpatchx"]
omit = [
  "*/__init__.py",
  "*temp*.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "case _ as unreachable:",
  "^\\s*@(?:typing\\.)?overload\\b",
]
